// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Produce topic shortcut should render a shortcuts table with prefix rule variation 1`] = `
<body>
  <div>
    <table
      class="pf-c-table pf-m-grid-md pf-m-compact"
      data-ouia-component-id="OUIA-Generated-Table-2"
      data-ouia-component-type="PF4/Table"
      data-ouia-safe="true"
      role="grid"
      style=""
    >
      <thead
        class=""
      >
        <tr
          class=""
          data-ouia-component-id="OUIA-Generated-TableRow-3"
          data-ouia-component-type="PF4/TableRow"
          data-ouia-safe="true"
        >
          <th
            class=""
            scope="col"
          >
            Resource
          </th>
          <th
            class=""
          />
          <th
            class=""
          />
          <th
            class=""
            scope="col"
          >
            Permission
          </th>
          <th
            class=""
          />
          <th
            class=""
          />
        </tr>
      </thead>
      <tbody
        class=""
        role="rowgroup"
      >
        <tr
          class=""
          data-ouia-component-id="OUIA-Generated-TableRow-4"
          data-ouia-component-type="PF4/TableRow"
          data-ouia-safe="true"
        >
          <td
            class=""
            colspan="5"
          >
            <h6
              class="pf-c-title pf-m-md"
              data-ouia-component-id="OUIA-Generated-Title-2"
              data-ouia-component-type="PF4/Title"
              data-ouia-safe="true"
            >
              Produce to a topic
               
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                />
              </svg>
            </h6>
          </td>
          <td
            class=""
          >
            <button
              aria-disabled="false"
              class="pf-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-2"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                />
              </svg>
            </button>
          </td>
        </tr>
        <tr
          class=""
          data-ouia-component-id="OUIA-Generated-TableRow-5"
          data-ouia-component-type="PF4/TableRow"
          data-ouia-safe="true"
        >
          <td
            class=""
          >
             
            <span
              class="pf-c-label pf-m-blue mas-m-solid"
            >
              <span
                class="pf-c-label__content"
              >
                T
              </span>
            </span>
             
            Topic
             
          </td>
          <td
            class=""
          >
            <div
              class="pf-c-select"
              data-ouia-component-id="OUIA-Generated-Select-single-2"
              data-ouia-component-type="PF4/Select"
              data-ouia-safe="true"
              style="width: 150px;"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Options menu"
                aria-labelledby=" pf-select-toggle-id-2"
                class="pf-c-select__toggle"
                id="pf-select-toggle-id-2"
                type="button"
              >
                <div
                  class="pf-c-select__toggle-wrapper"
                >
                  <span
                    class="pf-c-select__toggle-text"
                  >
                    Is
                  </span>
                </div>
                <span
                  class="pf-c-select__toggle-arrow"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </td>
          <td
            class=""
          >
            <div
              class="pf-c-form__group"
            >
              <div
                class="pf-c-form__group-control"
              >
                <div
                  aria-describedby="resource-name"
                  class="pf-c-select"
                  data-ouia-component-id="OUIA-Generated-Select-typeahead-2"
                  data-ouia-component-type="PF4/Select"
                  data-ouia-safe="true"
                  style="width: 170px;"
                >
                  <div
                    class="pf-c-select__toggle pf-m-typeahead"
                  >
                    <div
                      class="pf-c-select__toggle-wrapper"
                    >
                      <input
                        aria-label="{{value}} name"
                        autocomplete="off"
                        class="pf-c-form-control pf-c-select__toggle-typeahead"
                        id="pf-select-toggle-id-3-select-typeahead"
                        placeholder="Enter name"
                        type="text"
                        value=""
                      />
                    </div>
                    <button
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="Options menu"
                      aria-labelledby=" pf-select-toggle-id-3"
                      class="pf-c-button pf-c-select__toggle-button pf-m-plain"
                      id="pf-select-toggle-id-3"
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-c-select__toggle-arrow"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 320 512"
                        width="1em"
                      >
                        <path
                          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                
              </div>
            </div>
          </td>
          <td
            class=""
            colspan="2"
          >
            <div
              class="pf-c-label-group"
            >
              <div
                class="pf-c-label-group__main"
              >
                
                <ul
                  aria-label="Label group category"
                  class="pf-c-label-group__list"
                  role="list"
                >
                  <li
                    class="pf-c-label-group__list-item"
                  >
                    <span
                      class="pf-c-label pf-m-outline"
                    >
                      <span
                        class="pf-c-label__content"
                      >
                        Allow
                      </span>
                    </span>
                  </li>
                  <li
                    class="pf-c-label-group__list-item"
                  >
                    <span
                      class="pf-c-label pf-m-outline"
                    >
                      <span
                        class="pf-c-label__content"
                      >
                        Write
                      </span>
                    </span>
                  </li>
                  <li
                    class="pf-c-label-group__list-item"
                  >
                    <span
                      class="pf-c-label pf-m-outline"
                    >
                      <span
                        class="pf-c-label__content"
                      >
                        Create
                      </span>
                    </span>
                  </li>
                  <li
                    class="pf-c-label-group__list-item"
                  >
                    <button
                      class="pf-c-label pf-m-overflow"
                    >
                      <span
                        class="pf-c-label__content"
                      >
                        1 more
                      </span>
                    </button>
                  </li>
                </ul>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div>
    <ul
      aria-atomic="false"
      aria-live="polite"
      class="pf-c-alert-group pf-m-toast"
    />
  </div>
</body>
`;

exports[`Produce topic shortcut should render a shortcuts table with table header 1`] = `
<body>
  <div>
    <table
      class="pf-c-table pf-m-grid-md pf-m-compact"
      data-ouia-component-id="OUIA-Generated-Table-3"
      data-ouia-component-type="PF4/Table"
      data-ouia-safe="true"
      role="grid"
      style=""
    >
      <thead
        class=""
      >
        <tr
          class=""
          data-ouia-component-id="OUIA-Generated-TableRow-6"
          data-ouia-component-type="PF4/TableRow"
          data-ouia-safe="true"
        >
          <th
            class=""
            scope="col"
          >
            Resource
          </th>
          <th
            class=""
          />
          <th
            class=""
          />
          <th
            class=""
            scope="col"
          >
            Permission
          </th>
          <th
            class=""
          />
          <th
            class=""
          />
        </tr>
      </thead>
      <tbody
        class=""
        role="rowgroup"
      >
        <tr
          class=""
          data-ouia-component-id="OUIA-Generated-TableRow-7"
          data-ouia-component-type="PF4/TableRow"
          data-ouia-safe="true"
        >
          <td
            class=""
            colspan="5"
          >
            <h6
              class="pf-c-title pf-m-md"
              data-ouia-component-id="OUIA-Generated-Title-3"
              data-ouia-component-type="PF4/Title"
              data-ouia-safe="true"
            >
              Produce to a topic
               
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                />
              </svg>
            </h6>
          </td>
          <td
            class=""
          >
            <button
              aria-disabled="false"
              class="pf-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-3"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                />
              </svg>
            </button>
          </td>
        </tr>
        <tr
          class=""
          data-ouia-component-id="OUIA-Generated-TableRow-8"
          data-ouia-component-type="PF4/TableRow"
          data-ouia-safe="true"
        >
          <td
            class=""
          >
             
            <span
              class="pf-c-label pf-m-blue mas-m-solid"
            >
              <span
                class="pf-c-label__content"
              >
                T
              </span>
            </span>
             
            Topic
             
          </td>
          <td
            class=""
          >
            <div
              class="pf-c-select"
              data-ouia-component-id="OUIA-Generated-Select-single-3"
              data-ouia-component-type="PF4/Select"
              data-ouia-safe="true"
              style="width: 150px;"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Options menu"
                aria-labelledby=" pf-select-toggle-id-4"
                class="pf-c-select__toggle"
                id="pf-select-toggle-id-4"
                type="button"
              >
                <div
                  class="pf-c-select__toggle-wrapper"
                >
                  <span
                    class="pf-c-select__toggle-text"
                  >
                    Starts with
                  </span>
                </div>
                <span
                  class="pf-c-select__toggle-arrow"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </td>
          <td
            class=""
          >
            <div
              class="pf-c-form__group"
            >
              <div
                class="pf-c-form__group-control"
              >
                <div
                  aria-describedby="resource-name"
                  class="pf-c-select"
                  data-ouia-component-id="OUIA-Generated-Select-typeahead-3"
                  data-ouia-component-type="PF4/Select"
                  data-ouia-safe="true"
                  style="width: 170px;"
                >
                  <div
                    class="pf-c-select__toggle pf-m-typeahead"
                  >
                    <div
                      class="pf-c-select__toggle-wrapper"
                    >
                      <input
                        aria-label="{{value}} prefix"
                        autocomplete="off"
                        class="pf-c-form-control pf-c-select__toggle-typeahead"
                        id="pf-select-toggle-id-5-select-typeahead"
                        placeholder="Enter prefix"
                        type="text"
                        value=""
                      />
                    </div>
                    <button
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="Options menu"
                      aria-labelledby=" pf-select-toggle-id-5"
                      class="pf-c-button pf-c-select__toggle-button pf-m-plain"
                      id="pf-select-toggle-id-5"
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-c-select__toggle-arrow"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 320 512"
                        width="1em"
                      >
                        <path
                          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                
              </div>
            </div>
          </td>
          <td
            class=""
            colspan="2"
          >
            <div
              class="pf-c-label-group"
            >
              <div
                class="pf-c-label-group__main"
              >
                
                <ul
                  aria-label="Label group category"
                  class="pf-c-label-group__list"
                  role="list"
                >
                  <li
                    class="pf-c-label-group__list-item"
                  >
                    <span
                      class="pf-c-label pf-m-outline"
                    >
                      <span
                        class="pf-c-label__content"
                      >
                        Allow
                      </span>
                    </span>
                  </li>
                  <li
                    class="pf-c-label-group__list-item"
                  >
                    <span
                      class="pf-c-label pf-m-outline"
                    >
                      <span
                        class="pf-c-label__content"
                      >
                        Write
                      </span>
                    </span>
                  </li>
                  <li
                    class="pf-c-label-group__list-item"
                  >
                    <span
                      class="pf-c-label pf-m-outline"
                    >
                      <span
                        class="pf-c-label__content"
                      >
                        Create
                      </span>
                    </span>
                  </li>
                  <li
                    class="pf-c-label-group__list-item"
                  >
                    <button
                      class="pf-c-label pf-m-overflow"
                    >
                      <span
                        class="pf-c-label__content"
                      >
                        1 more
                      </span>
                    </button>
                  </li>
                </ul>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div>
    <ul
      aria-atomic="false"
      aria-live="polite"
      class="pf-c-alert-group pf-m-toast"
    />
  </div>
</body>
`;

exports[`Produce topic shortcut should render a shortcuts table without a header 1`] = `
<body>
  <div>
    <table
      class="pf-c-table pf-m-grid-md pf-m-compact"
      data-ouia-component-id="OUIA-Generated-Table-1"
      data-ouia-component-type="PF4/Table"
      data-ouia-safe="true"
      role="grid"
      style=""
    >
      <tbody
        class=""
        role="rowgroup"
      >
        <tr
          class=""
          data-ouia-component-id="OUIA-Generated-TableRow-1"
          data-ouia-component-type="PF4/TableRow"
          data-ouia-safe="true"
        >
          <td
            class=""
            colspan="5"
          >
            <h6
              class="pf-c-title pf-m-md"
              data-ouia-component-id="OUIA-Generated-Title-1"
              data-ouia-component-type="PF4/Title"
              data-ouia-safe="true"
            >
              Produce to a topic
               
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                />
              </svg>
            </h6>
          </td>
          <td
            class=""
          >
            <button
              aria-disabled="false"
              class="pf-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-1"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                />
              </svg>
            </button>
          </td>
        </tr>
        <tr
          class=""
          data-ouia-component-id="OUIA-Generated-TableRow-2"
          data-ouia-component-type="PF4/TableRow"
          data-ouia-safe="true"
        >
          <td
            class=""
          >
             
            <span
              class="pf-c-label pf-m-blue mas-m-solid"
            >
              <span
                class="pf-c-label__content"
              >
                T
              </span>
            </span>
             
            Topic
             
          </td>
          <td
            class=""
          >
            <div
              class="pf-c-select"
              data-ouia-component-id="OUIA-Generated-Select-single-1"
              data-ouia-component-type="PF4/Select"
              data-ouia-safe="true"
              style="width: 150px;"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Options menu"
                aria-labelledby=" pf-select-toggle-id-0"
                class="pf-c-select__toggle"
                id="pf-select-toggle-id-0"
                type="button"
              >
                <div
                  class="pf-c-select__toggle-wrapper"
                >
                  <span
                    class="pf-c-select__toggle-text"
                  >
                    Starts with
                  </span>
                </div>
                <span
                  class="pf-c-select__toggle-arrow"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </td>
          <td
            class=""
          >
            <div
              class="pf-c-form__group"
            >
              <div
                class="pf-c-form__group-control"
              >
                <div
                  aria-describedby="resource-name"
                  class="pf-c-select"
                  data-ouia-component-id="OUIA-Generated-Select-typeahead-1"
                  data-ouia-component-type="PF4/Select"
                  data-ouia-safe="true"
                  style="width: 170px;"
                >
                  <div
                    class="pf-c-select__toggle pf-m-typeahead"
                  >
                    <div
                      class="pf-c-select__toggle-wrapper"
                    >
                      <input
                        aria-label="{{value}} prefix"
                        autocomplete="off"
                        class="pf-c-form-control pf-c-select__toggle-typeahead"
                        id="pf-select-toggle-id-1-select-typeahead"
                        placeholder="Enter prefix"
                        type="text"
                        value=""
                      />
                    </div>
                    <button
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="Options menu"
                      aria-labelledby=" pf-select-toggle-id-1"
                      class="pf-c-button pf-c-select__toggle-button pf-m-plain"
                      id="pf-select-toggle-id-1"
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-c-select__toggle-arrow"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 320 512"
                        width="1em"
                      >
                        <path
                          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                
              </div>
            </div>
          </td>
          <td
            class=""
            colspan="2"
          >
            <div
              class="pf-c-label-group"
            >
              <div
                class="pf-c-label-group__main"
              >
                
                <ul
                  aria-label="Label group category"
                  class="pf-c-label-group__list"
                  role="list"
                >
                  <li
                    class="pf-c-label-group__list-item"
                  >
                    <span
                      class="pf-c-label pf-m-outline"
                    >
                      <span
                        class="pf-c-label__content"
                      >
                        Allow
                      </span>
                    </span>
                  </li>
                  <li
                    class="pf-c-label-group__list-item"
                  >
                    <span
                      class="pf-c-label pf-m-outline"
                    >
                      <span
                        class="pf-c-label__content"
                      >
                        Write
                      </span>
                    </span>
                  </li>
                  <li
                    class="pf-c-label-group__list-item"
                  >
                    <span
                      class="pf-c-label pf-m-outline"
                    >
                      <span
                        class="pf-c-label__content"
                      >
                        Create
                      </span>
                    </span>
                  </li>
                  <li
                    class="pf-c-label-group__list-item"
                  >
                    <button
                      class="pf-c-label pf-m-overflow"
                    >
                      <span
                        class="pf-c-label__content"
                      >
                        1 more
                      </span>
                    </button>
                  </li>
                </ul>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div>
    <ul
      aria-atomic="false"
      aria-live="polite"
      class="pf-c-alert-group pf-m-toast"
    />
  </div>
</body>
`;
